Fix the footer on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -244,6 +244,20 @@ html[data-theme="dark"],
   justify-content: space-between;
 }
 
+@media (max-width: 996px) {
+  .footer {
+    padding: unset;
+    margin-bottom: 16px;
+  }
+
+  .footer .container {
+    text-align: center;
+    gap: 24px;
+    flex-direction: column;
+    justify-items: center;
+  }
+}
+
 /* Remove the margin so they can be centered properly */
 .footer__links,
 .p-copy,
